--- a/itis3135/client_project/contact.html
+++ b/itis3135/client_project/contact.html
@@ -43,7 +43,7 @@
             <label>Event Date: <input id="eventDate" type="date" required></label>
             <label>Event Time: <input id="eventTime" type="time" required></label>
             <label>Event Location: <input id="eventLocation" type="text" placeholder="Enter event location" required></label>
-
+            <!-- add text box element for additional comments -->
             <button type="submit">Send</button>
          </form>
 
