--- a/itis3135/client_project/portfolio.html
+++ b/itis3135/client_project/portfolio.html
@@ -35,7 +35,11 @@
                 <div class="photo"><img src="images/Arangetram1.jpg" alt="#"></div>
                 <div class="photo"><img src="images/Housewarming-Photo1-Porunai2025.JPG" alt="#"></div>
                 <div class="photo"><img src="images/Arangetram2.jpg" alt="#"></div>
+                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
                 <div class="photo"><img src="images/Housewarming-Photo2-Porunai2025.JPG" alt="#"></div>
+                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
+                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
+                
             </div>
             <div class="lightbox" id="lightbox">
                 <img src="#" alt="#">
