added photos to portfolio page

--- a/itis3135/client_project/portfolio.html
+++ b/itis3135/client_project/portfolio.html
@@ -31,15 +31,14 @@
             <h2 style="display:none">text</h2>
             <div class="portfolio">
                 <div class="photo"><img src="images/Arangetram3.jpg" alt="#"></div>
-                <div class="photo"><img src="images/Housewarming-Photo3-Porunai2025.JPG" alt="#"></div>
-                <div class="photo"><img src="images/Arangetram1.jpg" alt="#"></div>
+                <div class="photo"><img src="images/Chembi-Karthi-DSC_0573.JPG" alt="#"></div>
+                <div class="photo"><img src="images/Photo3-Porunai2025.JPG" alt="#"></div>
+                <div class="photo"><img src="images/DSC_0197.JPG" alt="#"></div>
+                <div class="photo"><img src="images/Photo1-Porunai2025.JPG" alt="#"></div>
+                <div class="photo"><img src="images/DSC_0097.JPG" alt="#"></div>
                 <div class="photo"><img src="images/Housewarming-Photo1-Porunai2025.JPG" alt="#"></div>
-                <div class="photo"><img src="images/Arangetram2.jpg" alt="#"></div>
-                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
+                <div class="photo"><img src="images/Housewarming-Photo3-Porunai2025.JPG" alt="#"></div>
                 <div class="photo"><img src="images/Housewarming-Photo2-Porunai2025.JPG" alt="#"></div>
-                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
-                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
-                
             </div>
             <div class="lightbox" id="lightbox">
                 <img src="#" alt="#">
