added site logo

--- a/itis3135/client_project/index.html
+++ b/itis3135/client_project/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
          <div class="container">    <!--div for position and size of logo-->
-            <img src="images/logo_placeholder.png" alt="logo"/>
+            <img src="images/site_logo.png" alt="logo"/>
             <div class="headerText">
                 <h1>Porunai Photography</h1>
             </div>
@@ -26,7 +26,7 @@
         <hr>
     </header>
     <main>
-        <img class="hero-img" src="images/hero_image.png" alt="hero_image"/><!--element for hero image-->
+        <!-- <img class="hero-img" src="images/hero_image.png" alt="hero_image"/>element for hero image -->
         <div class="welcome">
             <h2>Welcome to the site for Porunai Photography!</h2>
             <p>We are a company that focuses on helping you keep important moments and memories in beautiful and aestetic ways.</p>
