--- a/itis3135/client_project/services.html
+++ b/itis3135/client_project/services.html
@@ -10,7 +10,7 @@
   <body>
     <header>
         <div class="container">
-            <img src="images/logo_placeholder.png" alt="logo"/>
+            <img src="images/site_logo.png" alt="logo"/>
             <div class="headerText">
                 <h1>Porunai Photography</h1>
             </div>
