--- a/itis3135/client_project/services.html
+++ b/itis3135/client_project/services.html
@@ -39,8 +39,9 @@
                 <h3>Housewarmings</h3>
                 <p><strong>Details:</strong></p>
                 <ul>
-                    <li><p>text</p></li>
-                    <li><p>text</p></li>
+                    <li><p>Video and photography coverage of the housewarming ceremory.</p></li>
+                    <li><p>Video and photography coverage of the decorations inside and outside the house</p></li>
+                    <li><p>Coverage of the after ceremony party</p></li>
                 </ul>
             </section>
             <section id="arangetrams" class="data-section">
