--- a/itis3135/client_project/contact.html
+++ b/itis3135/client_project/contact.html
@@ -27,8 +27,8 @@
     </header>
     <main><!--text displaying business contact information-->
         <h2>Contact Us</h2>
-        <p><strong>Phone Number: </strong>phone num</p>
-        <p><strong>Email: </strong>email_address</p>
+        <!-- <p><strong>Phone Number: </strong>phone num</p> -->
+        <p><strong>Email: </strong>vanimuruks@yahoo.com</p>
         <br>
         <hr style="width: 185px;height:7px; margin-left:0px">
         <!-- form goes here -->
